<resources>
    <string name="app_name">ApWallet</string>
    <string name="ap">Ap</string>
    <string name="wallet">Wallet</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="next">Next</string>
    <string name="store_locator">Store Locator</string>
    <string name="offers">Offers</string>
    <string name="help">Help</string>
    <string name="command">command</string>
    <string name="newUser">newUser</string>
    <string name="enter_pin">Enter Pin</string>
    <string name="_0">0</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="clear">Clear</string>
    <string name="martin_george">Hi, Martin George</string>
    <string name="martin_george1">Martin George</string>
    <string name="account_no_586742159568">Account no. 586742159568</string>
    <string name="apwallet_looks_ahead_to_make_your_payment_secure_and_easy">Our quick finger point payment services</string>
    <string name="services">Quick Payment &amp; Services</string>
    <string name="add_money">Add Money</string>
    <string name="mobile_recharge">Recharge</string>
    <string name="send_money">Send Money</string>
    <string name="scan_amp_pay"><![CDATA[Scan & Pay]]></string>
    <string name="bill_pay">Bill Pay</string>
    <string name="movie_ticket">Movie Ticket</string>
    <string name="insurance">Insurance</string>
    <string name="hotels">Hotels</string>
    <string name="your_cards">Your Cards</string>
    <string name="balance">Balance</string>
    <string name="rs_31_230">Rs. 31,230</string>
    <string name="download_all_recent_transaction">Send Recent Transaction</string>
    <string name="last_transactions">Last Transactions</string>
    <string name="re_charge">RE-CHARGE</string>
    <string name="dummy_transaction_number">012978xxxxxxx</string>
    <string name="rs_179">+  Rs. 179</string>
    <string name="your_contacts">Your Contacts</string>
    <string name="transfer_payment_to_your_contacts_using_apwallet">Transfer payment to your contacts using ApWallet</string>
    <string name="search_contact">Search Contact</string>
    <string name="profile">Profile</string>
    <string name="show_qr_code">QR Code</string>
    <string name="account_settings">Account Settings</string>
    <string name="account_info">Account Info</string>
    <string name="apps_settings">Apps Settings</string>
    <string name="language">Language</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="change_pin">Change PIN</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_your_pin">Change Your Pin</string>
    <string name="one_pin_for_all_facilities_in_apwallet">One Pin for all facilities in ApWallet!</string>
    <string name="your_current_pin">Your Current Pin</string>
    <string name="new_pin">New Pin</string>
    <string name="confirm_new_pin">Confirm New Pin</string>
    <string name="mobile_recharge1">Mobile Recharge</string>
    <string name="back">back</string>
    <string name="mobile_operator">Mobile Operator</string>
    <string name="jio">Jio</string>
    <string name="airtel">Airtel</string>
    <string name="VI">VI</string>
    <string name="bsnl">BSNL</string>
    <string name="recharge_details">Recharge Details</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="recharge_amount">Recharge Amount</string>
    <string name="enter_your_pin">Enter Your Pin</string>
    <string name="confirm_payment">Confirm Payment</string>
    <string name="success">Success</string>
    <string name="mobile_recharge_successful">Mobile Recharge Successful</string>
    <string name="transaction_id">Transaction ID</string>
    <string name="_75sebd65rz">75SEBD65RZ</string>
    <string name="_91_7500180093">+91 7500180093</string>
    <string name="operator">Operator</string>
    <string name="rs_499">Rs. 499</string>
    <string name="back_to_home">Back To Home</string>
    <string name="amount">Amount</string>
    <string name="pay_your_any_bill_using_apwallet">Pay your bill using ApWallet</string>
    <string name="your_balance">Your Balance</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_bill_type">Choose Bill Type</string>
    <string name="electricity">Electricity</string>
    <string name="gas">Gas</string>
    <string name="prepaid">Prepaid</string>
    <string name="dth">DTH</string>
    <string name="postpaid">Postpaid</string>
    <string name="piped_gas">Piped Gas</string>
    <string name="fast_tag">Fast tag</string>
    <string name="water">Water</string>
    <string name="cable_tv">Cable TV</string>
    <string name="biller_name">Biller Name</string>
    <string name="consumer_number">Consumer Number</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="enter_bill_amount">Enter Bill Amount</string>
    <string name="biller">Biller</string>
    <string name="pvvnl">PVVNL</string>
    <string name="_2867451893">2867451893</string>
    <string name="bill_payment_successful">Bill Payment Successful</string>
    <string name="_4682_7193_9514_7532">4682 7193 9514 7532</string>
    <string name="name">Name</string>
    <string name="exp_date">Exp Date</string>
    <string name="_12_26">12/26</string>
    <string name="apply_for_new_card">Apply for new card</string>
    <string name="new_card_type">Select New Card Type :</string>
    <string name="account_holder_name">Account Holder Name :</string>
    <string name="apply_now">Apply Now!</string>
    <string name="block_current_card">Block Current Card</string>
    <string name="send_money_to_anyone">Send Money to Anyone</string>
    <string name="now_you_can_easily_send_money_to_any_account_on_the_world_using_apwallet">Now you can easily send money to any account \non the world using ApWallet</string>
    <string name="account_details">Account Details</string>
    <string name="payee_account_number">Payee Account Number</string>
    <string name="enter_payee_account_number">Enter Payee Account Number</string>
    <string name="re_enter_payee_account_number">Re-enter Payee Account Number</string>
    <string name="ifse_code">IFSE Code</string>
    <string name="enter_ifse_code">Enter IFSE Code</string>
    <string name="enter_account_holder_name">Enter Account Holder Name</string>
    <string name="transfer_details">Transfer Details</string>
    <string name="enter_amount_to_be_transferred">Amount to be transferred</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="your_pin">Your PIN</string>
    <string name="confirm_details">Confirm Details</string>
    <string name="transfer_successful">Transfer Successful</string>
    <string name="a_c_number">A/c Number</string>
    <string name="_111464497089">111464497089</string>
    <string name="sbin0002330">SBIN0002330</string>
    <string name="rs_35_000">Rs. 35,000</string>
    <string name="remark">Remark</string>
    <string name="enter_remark_optional">Enter Remark (Optional)</string>
    <string name="add_money_to_apwallet">Add money to your ApWallet</string>
    <string name="you_can_also_transfer_funds_directly_from_bank_to_your_apwallet_account">You can also transfer funds directly from bank to your ApWallet account</string>
    <string name="card_details">Card Details</string>
    <string name="enter_card_number">Enter Card Number</string>
    <string name="cvv">CVV</string>
    <string name="enter_card_holder_name">Enter Card Holder Name</string>
    <string name="card_number">Card Number</string>
    <string name="xxxx_xxxx_xxxx_6699">XXXX-XXXX-XXXX-6699</string>
    <string name="date_amp_time"><![CDATA[Date & time]]></string>
    <string name="_17_06_2023_09_26_57">17-06-2023 09:26:57</string>
    <string-array name="card_type">
        <item>Visa</item>
        <item>Mastercard</item>
        <item>RuPay</item>
        <item>Credit Card</item>
    </string-array>
</resources>