<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".BillPayFragments.BillSuccessfulFragment">

    <ImageView
        android:id="@+id/imageView31"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:src="@drawable/ic_success"
        app:tint="@color/blue"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/success"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/textView44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bill_payment_successful"
        android:fontFamily="@font/montserrat"
        android:textColor="@color/transaction_green"
        android:textSize="19sp"
        android:textStyle="bold"
        android:layout_marginTop="28dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="@id/imageView31"
        app:layout_constraintEnd_toEndOf="@id/imageView31"
        app:layout_constraintTop_toBottomOf="@id/imageView31"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView44">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView45"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/transaction_id"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView46"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/_75sebd65rz"
                android:textColor="#000000"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView47"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/biller"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView48"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/pvvnl"
                android:textColor="#000000"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/textView49"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/consumer_number"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView50"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/_2867451893"
                android:textColor="#000000"
                android:textSize="13sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView51"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:text="@string/amount"
                android:textColor="#000000"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/textView52"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/rs_499"
                android:textColor="#000000"
                android:textSize="13sp" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back_to_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_blue_background"
            android:text="@string/back_to_home"
            android:textColor="@color/white"
            style="@android:style/Widget.Button"
            android:fontFamily="@font/montserrat"
            android:textStyle="bold"
            android:textSize="15sp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginStart="32dp"/>

    </LinearLayout>


    <ImageView
        android:id="@+id/imageView32"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_share"
        android:contentDescription="@string/success"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        app:tint="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>