<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_pin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    tools:context=".Activities.PinActivity">

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="0dp"
        android:layout_height="230dp"
        app:srcCompat="@drawable/background_top_pin"
        android:contentDescription="@string/enter_pin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/adamina"
        android:text="@string/enter_pin"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.chaos.view.PinView
        android:id="@+id/pin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:cursorVisible="true"
        android:inputType="numberPassword"
        app:itemCount="4"
        app:itemHeight="48dp"
        app:itemRadius="16dp"
        app:itemSpacing="16dp"
        app:itemWidth="48dp"
        app:lineWidth="0dp"
        android:itemBackground="#F0FFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView7"/>


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:columnCount="3"
        android:rowCount="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView7">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:background="@drawable/ic_circle1"
            android:elevation="6dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/_7"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:background="@drawable/ic_circle1"
            android:elevation="6dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/_8"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:background="@drawable/ic_circle1"
            android:elevation="6dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/_9"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:background="@drawable/ic_circle1"
            android:elevation="6dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/_4"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:background="@drawable/ic_circle1"
            android:elevation="6dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/_5"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:background="@drawable/ic_circle1"
            android:elevation="6dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/_6"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:background="@drawable/ic_circle1"
            android:elevation="6dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/_1"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:background="@drawable/ic_circle1"
            android:elevation="6dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/_2"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:background="@drawable/ic_circle1"
            android:elevation="6dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/_3"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_clear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:background="@drawable/ic_circle1"
            android:elevation="6dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/clear"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:background="@drawable/ic_circle1"
            android:elevation="6dp"
            android:fontFamily="@font/open_sans"
            android:text="@string/_0"
            android:textColor="@color/black"
            android:textSize="26sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_next"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="12dp"
            android:background="@drawable/ic_next"
            android:elevation="6dp"
            android:fontFamily="@font/open_sans"
            android:textColor="@color/black"
            android:textSize="32sp" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>