<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/transaction_background"
    android:layout_marginBottom="10dp"
    android:paddingBottom="20dp">

    <TextView
        android:id="@+id/transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/re_charge"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/transaction_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dummy_transaction_number"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:textColor="@color/black"
        android:fontFamily="@font/montserrat"
        app:layout_constraintStart_toStartOf="@id/transaction"
        app:layout_constraintTop_toBottomOf="@id/transaction"/>

    <TextView
        android:id="@+id/transaction_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rs_179"
        android:textSize="17sp"
        android:textColor="@color/transaction_green"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>